[gd_scene load_steps=3 format=3 uid="uid://bieur77d2qpxg"]

[ext_resource type="Script" path="res://scripts/MapScene.gd" id="1_u47hg"]
[ext_resource type="PackedScene" uid="uid://cvmipuge2v4hu" path="res://scenes/MapNode.tscn" id="2_jjq3g"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u47hg")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewportContent" type="Control" parent="ScrollContainer"]
custom_minimum_size = Vector2(1150, 1000)
layout_mode = 2

[node name="Background" type="TextureRect" parent="ScrollContainer/ViewportContent"]
custom_minimum_size = Vector2(1500, 1000)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PathDrawer" type="Line2D" parent="ScrollContainer/ViewportContent"]

[node name="NodeContainer" type="Node2D" parent="ScrollContainer/ViewportContent"]

[node name="1-A" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 149.0
offset_top = 766.0
offset_right = 189.0
offset_bottom = 826.0

[node name="1-B" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 347.0
offset_top = 761.0
offset_right = 387.0
offset_bottom = 821.0

[node name="1-C" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 624.0
offset_top = 759.0
offset_right = 664.0
offset_bottom = 819.0

[node name="2-A" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 158.0
offset_top = 523.0
offset_right = 198.0
offset_bottom = 583.0

[node name="2-B" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 424.0
offset_top = 540.0
offset_right = 464.0
offset_bottom = 600.0

[node name="2-C" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 594.0
offset_top = 544.0
offset_right = 634.0
offset_bottom = 604.0

[node name="3-A" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 281.0
offset_top = 391.0
offset_right = 321.0
offset_bottom = 451.0

[node name="3-B" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 500.0
offset_top = 379.0
offset_right = 540.0
offset_bottom = 439.0

[node name="4-A" parent="ScrollContainer/ViewportContent/NodeContainer" instance=ExtResource("2_jjq3g")]
offset_left = 389.0
offset_top = 226.0
offset_right = 429.0
offset_bottom = 286.0
